# slice

./: .env  .env.example  .gitignore  AGENTS.md  CARDS_DEBUG_EXPLANATION.md  CIRCUIT_COMPILATION.md  CIRCUIT_COMPILATION_NOTES.md  CIRCUIT_HASH_SOLUTION.md  CIRCUIT_STATUS.md  DEBUGGER_GUIDE.md  DEBUGGER_RESULTS.md  HASH_INVESTIGATION.md  MVP_STATUS.md  Makefile  README.md  TESTING_FLOW.md  WITNESS_EXTRACTION.md  environments.toml  next.config.ts  package-lock.json  package.json  vite.config.ts  xo-connect-docs.md
.config/stellar/: upgrade_check.json
backend/: server.cjs
circuits/: Nargo.toml  Verifier.toml
circuits/reveal/: Nargo.toml  Prover.toml
circuits/src/: main.nr
circuits/tally/: Prover.toml  Verifier.toml  main.nr
circuits/vote/: Nargo.toml  Prover.toml
contracts/: Slice.sol
contracts/slice/: Cargo.toml
contracts/voting/: Cargo.toml
contracts/voting/src/: error.rs  lib.rs
public/: manifest.json
public/circuits/: reveal.json  sudoku.json  sudoku_vk.json  voting.json
scripts/: demo.sh  full_demo.sh  generate-vk.js  generateHash.js  setup_dev.sh
scripts/test/: tally_test.sh  vote_test.sh
scripts/zk/: constants.js  zkTally.js  zkVote.js
src/: App.tsx  index.css  main.tsx
src/app/: globals.css
src/components/: AssignJurorButton.tsx  AutoConnect.tsx  ConnectButton.tsx  ContractConfig.tsx  DevSetupButton.tsx  DisputeSetupWizard.tsx  JurorVotingBooth.tsx  PrizePool.tsx  ProposalCard.tsx  RevealForm.tsx  SuccessAnimation.module.css  SuccessAnimation.tsx  Sudoku.module.css  Sudoku.tsx  VoteComponent.tsx  VoteForm.tsx  Voting.tsx  (+1 more)
(+119 files in other folders)
